API and parser update
featuring unit tests, because I developed the parser via TDD

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,13 @@
 		"psr-4": {
 			"emilymaitan\\PAE_EM4\\": "./src"
 		}
-	}
+	},
+    "autoload-dev": {
+        "psr-4": {
+          "emilymaitan\\PAE_EM4\\": "./tests"
+        }
+    },
+    "require-dev": {
+      "phpunit/phpunit": "^5.7"
+    }
 }
